# line-clipping-algorithm

./: .gitignore  CMakeLists.txt  line-clipping-algorithm.sln  line-clipping-algorithm.vcxproj  line-clipping-algorithm.vcxproj.filters
assets/shader/: basic.fs.glsl  basic.vs.glsl
src/: Application.cpp  Application.h  main.cpp
src/application/: Application.cpp  Application.h
src/math/: FillingAlgorithm.cpp  FillingAlgorithm.h  Math.cpp  Math.h
src/shader/: Shader.cpp  Shader.h
src/shape/: Shape.cpp  Shape.h
src/utility/: ScreenUtils.cpp  ScreenUtils.h  utils.h
tests/: mainTest.cpp  unittest.cpp  unittest.h
